force-app/main/default/objects/Sales_Order_Item__c/Sales_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Order Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>