force-app/main/default/objects/Sales_Order_Item__c/fields/Implementation_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Ticket_URL__c</fullName>
    <formula>Subscription__r.SBQQ__OrderProduct__r.Order.Name</formula>
    <label>Implementation Ticket URL</label>
    <type>Text</type>
</CustomField>