force-app/main/default/objects/Sales_Order_Item__c/fields/Installation_Line__c.field-meta.xml
<CustomField>
    <fullName>Installation_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Line</label>
    <referenceTo>Installation_Line__c</referenceTo>
    <relationshipLabel>Sales Order Items</relationshipLabel>
    <relationshipName>Sales_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>