force-app/main/default/objects/Sales_Order_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Installation_Line__r.Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>