force-app/main/default/objects/Sales_Order_Item__c/fields/Sportal_Installation_ID__c.field-meta.xml
<CustomField>
    <fullName>Sportal_Installation_ID__c</fullName>
    <formula>Installation_Line__r.Installation__r.Sportal_Installation_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sportal Installation ID</label>
    <type>Text</type>
</CustomField>