force-app/main/default/objects/Sales_Order_Item__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Sales Order Items</relationshipLabel>
    <relationshipName>Sales_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>